--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="descripción" content="Buying and selling crypto have never been so easy. Fodex is an exchange globally recognized and awarded by multiple VIP entities">
+
     <title>Foxed - Exchange</title>
     <link rel="stylesheet" href="css/main.css" />
 
@@ -40,7 +43,7 @@
       </nav>
 
       <div class="search-area">
-        <button class="search-area__languages">
+        <button class="search-area__languages" aria-label="languages list slider">
 
           <label for="languages"></label>
 
@@ -112,19 +115,19 @@
         <div id="description" class="service-description__card-container">
           <article class="card-container__card">
             <img src="./assets/1.png" alt="system servers icon" class="card__img card__img--system" />
-            <h4>Backoffice Systems</h4>
+            <h3>Backoffice Systems</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, praesentium consequuntur sapiente molestiae cum tempora. Ut nobis, aperiam aut dolor deserunt consequatur maiores, provident dolore, quos suscipit vel blanditiis tempora?</p>
           </article>
           <article class="card-container__card">
             <img src="./assets/2.png" alt="crypto trending icon" class="card__img card__img--radius" />
-            <h4>Trading Platform</h4>
+            <h3>Trading Platform</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolorem omnis numquam eligendi provident consequuntur. Iusto reiciendis impedit nemo! Repellat nemo totam blanditiis nam molestias maiores similique? Nesciunt, facilis. Vitae?
             </p>
           </article>
           <article class="card-container__card">
             <img src="./assets/3.png" alt="wallet icon" class="card__img card__img--wallet" />
-            <h4>Exchange, ICO & Wallet</h4>
+            <h3>Exchange, ICO & Wallet</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor qui accusantium nulla mollitia reprehenderit accusamus saepe rerum nemo. Eligendi consectetur suscipit repudiandae voluptates enim error culpa voluptas laboriosam, eius accusantium.</p>
           </article>
         </div>
@@ -144,7 +147,7 @@
             placeholder="Enter your email to get more details" name="email" autocomplete="email"
           />
           <button type="submit">
-            <i class="fa-solid fa-right-long"></i>
+            <i class="fa-solid fa-right-long" aria-label="Submit button"></i>
           </button> 
         </div>
       </section>
@@ -169,9 +172,9 @@
 
       <section class="social-media">
         <ul class="social-media__list">
-          <li class="social-media__list--item"><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-          <li class="social-media__list--item"><a href=""></a><i class="fa-brands fa-twitter"></i></li>
-          <li class="social-media__list--item"><a href=""><i class="fa-brands fa-google"></i></a></li>
+          <li class="social-media__list--item"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+          <li class="social-media__list--item"><a href="#"></a><i class="fa-brands fa-twitter"></i></li>
+          <li class="social-media__list--item"><a href="#"><i class="fa-brands fa-google"></i></a></li>
         </ul>
       </section>
     </footer>
