Enhanced large screen fixes

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
         <div class="service-description__description">
           <p class="service-description__description__line">_</p>
         <h2>Fully Integrated Products</h2>
-        <p class="service-description__description__subtitle">
+        <p class="service-description__description__subtitle " id="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         </div>
         
 
-        <div id="description" class="service-description__card-container">
+        <div  class="service-description__card-container">
           <article class="card-container__card">
             <img src="./assets/1.png" alt="system servers icon" class="card__img card__img--system" />
             <h3>Backoffice Systems</h3>
